--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/wishlist/wishlist-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/wishlist/wishlist-overlay.phtml
@@ -14,13 +14,10 @@ use Satoshi\Theme\Block\Template;
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
-$isCartPage = $block->getData('isCartPage');
 ?>
 
 <div
-    <?php if (!$isCartPage) : ?>
   :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'wishlist' : !$store.resizable.isVisible('wishlist-desktop')"
-    <?php endif; ?>
   x-data="
     {
       get wishlistItems() { return $store.wishlist.wishlistItems },
@@ -31,7 +28,7 @@ $isCartPage = $block->getData('isCartPage');
   class="contents"
 >
   <div
-      class="flex flex-col gap-5 rounded-md p-5 <?= $isCartPage ? '' : 'md:w-[--wishlist-width] bg-bg-500' ?> md:gap-0 md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
+      class="flex flex-col gap-5 rounded-md p-5 md:w-[--wishlist-width] bg-bg-500 md:gap-0 md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
   >
     <div
       class="flex items-center justify-between md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 md:px-6 sticky top-0 z-10 bg-bg-500"
