--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
@@ -55,7 +55,7 @@ $activeSelectOptions = [];
                   name="bundle_option[<?= (int) $optionId ?>]"
                   form="product_addtocart_form"
                   class="radio__input"
-                   x-bind:checked="activeSelectOptions['<?= (int)$optionId ?>'] == ''"
+                   :checked="activeSelectOptions['<?= (int)$optionId ?>'] == ''"
                   value=""
                   x-on:change="
                             activeSelectOptions['<?= (int) $optionId ?>'] = [$event.target.value];
@@ -82,7 +82,7 @@ $activeSelectOptions = [];
                 form="product_addtocart_form"
                 class="radio__input"
             <?= $option->getRequired() ? 'required' : '' ?>
-                 x-bind:checked="activeSelectOptions['<?= (int)$optionId ?>'] == '<?= (int)$selectionId ?>'"
+                 :checked="activeSelectOptions['<?= (int)$optionId ?>'] == '<?= (int)$selectionId ?>'"
             <?php if (!$selection->isSaleable()): ?>
               disabled
             <?php endif; ?>
