--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/sidebar.phtml
@@ -63,7 +63,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                         <template x-if="!product.product_has_required_options">
                                             <button
                                                 type="button"
-                                                @click.prevent='setActionBtnText(`add-to-cart-${product.product_id}`); addToCart(product.add_to_cart_params, product.product_sku)'
+                                                @click.prevent='setActionBtnText(`add-to-cart-${product.product_id}`); addToCartFromWishlistSidebar(product.add_to_cart_params, product.product_sku)'
                                                 class="button button--filled-primary"
                                                 :aria-label="hyva.str('<?= $escaper->escapeJs(__('Add to Cart %1'))  ?>', product.product_name)"
                                                 data-addto="cart"
@@ -82,7 +82,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                             </div>
                             <button
                                 type="button"
-                                @click.prevent="removeFromWishlist(product.delete_item_params)"
+                                @click.prevent="removeFromWishlistSidebar(product.delete_item_params)"
                                 :aria-label="hyva.str('<?= $escaper->escapeJs(__('Remove product "%1" from My Wish List')) ?>', product.product_name)"
                                 class="h-[30px] w-[30px] ml-auto inline-flex items-center justify-center text-primary-bg rounded-lg border"
                                 :class="isLoading && 'button--disabled'"
