--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
@@ -2,12 +2,12 @@
 
 declare(strict_types=1);
 
-use Magento\Framework\Escaper;
-use Magento\Catalog\Helper\Output as CatalogOutputHelper;
-use Magento\Catalog\Block\Product\View\Attributes;
-use Magento\Catalog\Model\Product;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
+use Magento\Catalog\Block\Product\View\Attributes;
+use Magento\Catalog\Helper\Output as CatalogOutputHelper;
+use Magento\Catalog\Model\Product;
+use Magento\Framework\Escaper;
 
 /** @var Escaper $escaper */
 /** @var CatalogOutputHelper $output */
@@ -27,16 +27,16 @@ $product = $block->getProduct();
 <?php if ($attributes = $block->getAdditionalData()): ?>
     <div class="align-start animate-on-transition mb-8 flex flex-col px-4 md:p-0" x-data="Accordion('true', 300)">
         <button
-            class="group flex items-center justify-between text-start"
+            class="group flex items-center justify-between text-start gap-3"
             x-ref="AccordionButton"
             type="button"
             :aria-expanded="isExpanded"
             aria-controls="attributes_panel"
             aria-labelledby="attributes_label"
         >
-            <p class="text-base font-semibold leading-tight text-text-500">
+            <div class="text-base font-semibold leading-tight text-text-500">
                 <?= $block->getTitle() ? $escaper->escapeHtml($block->getTitle()) : '&nbsp;' ?>
-            </p>
+            </div>
             <span x-ref="AccordionIcon" class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable" style="rotate: -180deg;">
                 <?= $hyvaicons->renderHtml('chevron', 'rotate-90', attributes: ['title' => '']); ?>
             </span>
@@ -48,7 +48,6 @@ $product = $block->getProduct();
             class="overflow-hidden"
             id="attributes_panel"
             aria-labelledby="attributes_label"
-            x-cloak
         >
             <div class="mt-3 overflow-hidden">
                 <div class="table-wrapper max-w-prose overflow-x-auto" id="product-attributes">
