--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -139,7 +139,7 @@ h3 {
   @apply -mt-[88px] flex-1 max-md:overflow-hidden;
 }
 
-.product-page {
+.product-info-main {
   @apply max-md:pb-10;
 }
 
