--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
@@ -22,26 +22,24 @@ $isPopup = $block->getData('is_popup') ?? false;
 ?>
 
 <?php if ($product->isSaleable()): ?>
-  <template x-if="!$store.main.isMobile || <?= (int) ($isPopup || in_array($productType, ['simple', 'virtual'])) ?>">
     <form method="post"
           action="<?= $escaper->escapeUrl($productInfoBlock->getSubmitUrl($product)) ?>"
           id="product_addtocart_form"
-          <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
+        <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
           @submit.prevent="addToCart($event)"
-      <?php if (!$isPopup): ?>
-          class="animate-on-transition md:mb-7 max-md:hidden"
-      <?php else: ?>
-          class="max-md:mx-2"
-      <?php endif; ?>
+        <?php if (!$isPopup): ?>
+            class="animate-on-transition max-md:hidden"
+        <?php else: ?>
+            class="max-md:mx-2"
+        <?php endif; ?>
     >
-      <input type="hidden" name="product" value="<?= (int) $product->getId() ?>"/>
-      <input type="hidden" name="selected_configurable_option" value=""/>
-      <input type="hidden" name="related_product" id="related-products-field" value=""/>
-      <input type="hidden" name="item" value="<?= (int) $block->getRequest()->getParam('id') ?>">
-      <?= $block->getBlockHtml('formkey') ?>
+        <input type="hidden" name="product" value="<?= (int)$product->getId() ?>"/>
+        <input type="hidden" name="selected_configurable_option" value=""/>
+        <input type="hidden" name="related_product" id="related-products-field" value=""/>
+        <input type="hidden" name="item" value="<?= (int)$block->getRequest()->getParam('id') ?>">
+        <?= $block->getBlockHtml('formkey') ?>
 
-      <?= $block->getChildHtml() ?>
+        <?= $block->getChildHtml() ?>
 
     </form>
-  </template>
 <?php endif; ?>
