--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -74,17 +74,15 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
     <div>
         <!-- Options -->
-        <template x-if="!$store.main.isMobile || <?= (int)in_array($productType, ['simple', 'virtual']) ?>">
-            <div class="animate-on-transition md:mb-5 max-md:hidden">
-                <?= $block->getChildHtml('product.info.form') ?>
-                <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
-            </div>
-        </template>
+        <div class="animate-on-transition max-md:hidden">
+            <?= $block->getChildHtml('product.info.form') ?>
+            <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
+        </div>
 
         <div class="flex flex-col sm:flex-row items-end mb-4">
             <?php if ($product->isSaleable()): ?>
                 <div
-                    class="relative flex flex-grow flex-wrap justify-stretch gap-3 w-full"
+                    class="relative flex flex-grow flex-wrap justify-stretch gap-3 w-full max-md:px-2"
                     id="product-actions"
                     x-transition
                     x-intersect:enter="toggleStickyProductActions(false)"
@@ -95,21 +93,27 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
                 <!-- StickyProductActionsPopup -->
                 <?php
+                $priceHtml = '';
+                if (!empty($block->getChildHtml("product.info.price"))) {
+                    $priceHtml = <<<HTML
+                        <div
+                            class="ml-3 flex flex-grow gap-3"
+                            x-show="!isVariantInCart"
+                            x-transition
+                        >
+                            {$block->getChildHtml("product.info.price")}
+                        </div>
+                    HTML;
+                }
                 $stickyActions = <<<HTML
                     <div class="h-9 [.page-product-bundle_&]:h-11"></div>
                     <template x-portal="document.getElementById('popup-fixed-content-portal')">
                         <div
                             id="ProductBottomActionsPopup"
                             x-show="\$store.popup.currentPopup == 'product_bottom_actions'"
-                            class="sticky-actions flex w-full items-center justify-end gap-3 bg-bg-500 px-3"
+                            class="sticky-actions flex w-full items-center justify-end gap-3 bg-bg-500"
                         >
-                            <div
-                                class="ml-3 flex flex-grow gap-3"
-                                x-show="!isVariantInCart"
-                                x-transition
-                            >
-                                {$block->getChildHtml("product.info.price")}
-                            </div>
+                            {$priceHtml}
                             <div
                                 class="flex flex-grow justify-stretch gap-3"
                                 :class="{
@@ -138,28 +142,28 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
                 $productActions = <<<HTML
                     <template x-if="\$store.main.isMobile">
-                      <div class="contents">
-                        <div class="max-md:mx-2" id="product-options">
-                          {$options}
-                        </div>
-
-                        <div class="{$minHeight} md:hidden"></div>
-                          <template x-portal="document.getElementById('popup-fixed-content-portal')">
-                            <div x-show="\$store.popup.currentPopup === productActionsPopup">
-                              <div class="bg-bg-500 relative z-10">
-                                {$block->getChildBlock('product.actions')->setData(['is_popup' => true, 'is_small' => false])->toHtml()}
-                              </div>
+                        <div class="contents">
+                            <div class="max-md:mx-2" id="product-options">
+                                {$options}
                             </div>
-                          </template>
+
+                            <div class="{$minHeight} md:hidden"></div>
+                            <template x-portal="document.getElementById('popup-fixed-content-portal')">
+                                <div x-show="\$store.popup.currentPopup === productActionsPopup">
+                                    <div class="bg-bg-500 relative z-10">
+                                        {$block->getChildBlock('product.actions')->setData(['is_popup' => true, 'is_small' => false])->toHtml()}
+                                    </div>
+                                </div>
+                            </template>
                         </div>
-                      </div>
                     </template>
                 HTML;
                 ?>
                 <?= $popup
                     ->setData([
                         'id' => $popup_id,
-                        'isFocused' => true
+                        'isFocused' => true,
+                        'isFullScreen' => $productType === 'bundle',
                     ])
                     ->setChildHtml($productActions)
                     ->render() ?>
