--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -54,291 +54,282 @@ $cartMessage = $block->getCartMessage();
   <?php endif; ?>
 
   <div class="flex flex-grow flex-wrap justify-stretch gap-3 bg-bg-500 relative">
-    <!-- Quantity Controls -->
-    <?php if ($block->getChildBlock('product.info.quantity')): ?>
-      <?= $block->getChildBlock('product.info.quantity')->setData([
-        'is_popup' => $isPopup,
-        'is_small' => $isSmall
-      ])->toHtml() ?>
-    <?php endif; ?>
-
-    <!-- Add to cart button -->
-    <button
-      <?php if ($isProductInCart || !$inStock): ?>
-        style="display: none"
+    <?php if ($inStock): ?>
+      <!-- Quantity Controls -->
+      <?php if ($block->getChildBlock('product.info.quantity')): ?>
+        <?= $block->getChildBlock('product.info.quantity')->setData([
+          'is_popup' => $isPopup,
+          'is_small' => $isSmall
+        ])->toHtml() ?>
       <?php endif; ?>
-      x-show="<?= (int) $inStock ?> && !isVariantInCart"
-      class="
-        <?= (in_array($productType,
-          ['configurable', 'downloadable', 'grouped', 'bundle']) && !$isPopup) ? 'max-md:hidden' : '' ?>
-        <?= $isSmall ? 'button--size-sm' : '' ?>
-        animate-on-transition button button--filled-primary flex-grow
-        <?= $isPopup ? 'max-sm:px-3' : '' ?>
-      "
-      :class="
-        {
-          'md:hidden': isVariantInCart || <?= (int) !$inStock ?>,
-          'max-md:hidden':
-            <?= (int) !$inStock ?> ||
-            (<?= (int) (!$isPopup && in_array($productType, ['configurable', 'downloadable', 'grouped', 'bundle'])) ?>) ||
-            (<?= (int) $isPopup ?> && isVariantInCart),
-          'button--disabled': isProductBeingAdded || isProductBeingRemoved
-        }
-      "
-      type="submit"
-      form="product_addtocart_form"
-      title="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
-      data-addto="cart"
-      x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
-      :disabled="isProductBeingAdded || isProductBeingRemoved"
-    >
-      <span
-        class="flex"
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
+
+      <!-- Add to cart button -->
+      <button
+        <?php if ($isProductInCart): ?>
+          style="display: none"
+        <?php endif; ?>
+        x-show="!isVariantInCart"
+        class="
+          <?= (in_array($productType,
+            ['configurable', 'downloadable', 'grouped', 'bundle']) && !$isPopup) ? 'max-md:hidden' : '' ?>
+          <?= $isSmall ? 'button--size-sm' : '' ?>
+          animate-on-transition button button--filled-primary flex-grow
+          <?= $isPopup ? 'max-sm:px-3' : '' ?>
+        "
+        :class="
+          {
+            'md:hidden': isVariantInCart,
+            'max-md:hidden':
+              (<?= (int) (!$isPopup && in_array($productType, ['configurable', 'downloadable', 'grouped', 'bundle'])) ?>) ||
+              (<?= (int) $isPopup ?> && isVariantInCart),
+            'button--disabled': isProductBeingAdded || isProductBeingRemoved
+          }
+        "
+        type="submit"
+        form="product_addtocart_form"
+        title="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
+        data-addto="cart"
+        x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
+        :disabled="isProductBeingAdded || isProductBeingRemoved"
       >
+        <span
+          class="flex"
+          x-show="!isProductBeingAdded && !isProductBeingRemoved"
+        >
           <?= __('Add to cart') ?>
           <span class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>">
-              <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+            <?= $hyvaicons->renderHtml('shopping-bag'); ?>
           </span>
-      </span>
-
-      <span style="display: none" x-show="isProductBeingRemoved">
-          <?= __('Removing from cart...') ?>
-      </span>
-
-      <span style="display: none" x-show="isProductBeingAdded">
-          <?= __('Adding...') ?>
-      </span>
-    </button>
-
-    <!-- Select items, only for grouped products -->
-    <button
-      <?php if ($productType !== 'grouped'): ?>
-        style="display: none"
-      <?php endif; ?>
-      class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($isPopup || $productType !== 'grouped') ? 'max-md:hidden' : '' ?>"
-      @click.prevent="showProductActions()"
-      :class="
-      {
-        'button--disabled': isProductBeingAdded || isProductBeingRemoved
-      }
-    "
-      :disabled="isProductBeingAdded || isProductBeingRemoved"
-      type="button"
-    >
-      <span
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
-        class="inline-flex items-center"
-      >
-        <?= __('Select items') ?>
-        <span
-          class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
-        >
-          <?= $hyvaicons->renderHtml('shopping-bag'); ?>
         </span>
-      </span>
 
         <span style="display: none" x-show="isProductBeingRemoved">
           <?= __('Removing from cart...') ?>
-      </span>
+        </span>
 
         <span style="display: none" x-show="isProductBeingAdded">
           <?= __('Adding...') ?>
-      </span>
-    </button>
+        </span>
+      </button>
 
-    <!-- Select options, for configurable product when variant not in cart -->
-    <button
-      <?php if ($isProductInCart): ?>
-        style="display: none"
-      <?php endif; ?>
-      x-show="!isVariantInCart"
-      class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($isPopup || !$hasVariants) ? 'max-md:hidden' : '' ?>"
-      @click.prevent="showProductActions()"
-      :class="
-        {
-          'button--disabled': isProductBeingAdded || isProductBeingRemoved
-        }
-      "
+      <!-- Select items, only for grouped products -->
+      <button
+        <?php if ($productType !== 'grouped'): ?>
+          style="display: none"
+        <?php endif; ?>
+        class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($isPopup || $productType !== 'grouped') ? 'max-md:hidden' : '' ?>"
+        @click.prevent="showProductActions()"
+        :class="
+          {
+            'button--disabled': isProductBeingAdded || isProductBeingRemoved
+          }
+        "
         :disabled="isProductBeingAdded || isProductBeingRemoved"
         type="button"
-    >
-      <span
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
-        class="inline-flex items-center"
       >
-        <?= __('Select options') ?>
         <span
-          class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+          x-show="!isProductBeingAdded && !isProductBeingRemoved"
+          class="inline-flex items-center"
         >
-          <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+          <?= __('Select items') ?>
+          <span
+            class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+          >
+            <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+          </span>
         </span>
-      </span>
 
         <span style="display: none" x-show="isProductBeingRemoved">
           <?= __('Removing from cart...') ?>
-      </span>
-
-        <span style="display: none" x-show="isProductBeingAdded">
-          <?= __('Adding...') ?>
-      </span>
-    </button>
-
-    <!-- TODO: refactor to eliminate duplicates -->
-    <!-- Select another option, for configurable when variant is in cart -->
-    <button
-      <?php if (!$isProductInCart || $isPopup || !$hasVariants): ?>
-        style="display: none"
-      <?php endif; ?>
-      x-show="<?= (int) $hasVariants ?> && isVariantInCart && !<?= (int) $isPopup ?>"
-      class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
-      @click.prevent="showProductActions()"
-      type="button"
-    >
-      <span
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
-        class="inline-flex items-center"
-      >
-        <?= __('Select another option') ?>
-        <span
-          class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
-        >
-          <?= $hyvaicons->renderHtml('shopping-bag'); ?>
         </span>
-      </span>
-
-        <span style="display: none" x-show="isProductBeingRemoved">
-          <?= __('Removing from cart...') ?>
-      </span>
 
         <span style="display: none" x-show="isProductBeingAdded">
           <?= __('Adding...') ?>
-      </span>
-    </button>
+        </span>
+      </button>
 
-    <!-- Show links, for downloadable products -->
-    <?php if ($productType === 'downloadable'): ?>
+      <!-- Select options, for configurable product when variant not in cart -->
       <button
-        <?php if (!$inStock | $isPopup): ?>
+        <?php if ($isProductInCart): ?>
           style="display: none"
         <?php endif; ?>
-        x-show="<?= (int) !$isPopup ?>"
+        x-show="!isVariantInCart"
+        class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($isPopup || !$hasVariants) ? 'max-md:hidden' : '' ?>"
+        @click.prevent="showProductActions()"
+        :class="
+          {
+            'button--disabled': isProductBeingAdded || isProductBeingRemoved
+          }
+        "
+        :disabled="isProductBeingAdded || isProductBeingRemoved"
+        type="button"
+      >
+        <span
+          x-show="!isProductBeingAdded && !isProductBeingRemoved"
+          class="inline-flex items-center"
+        >
+          <?= __('Select options') ?>
+          <span
+            class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+          >
+            <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+          </span>
+        </span>
+
+        <span style="display: none" x-show="isProductBeingRemoved">
+          <?= __('Removing from cart...') ?>
+        </span>
+
+        <span style="display: none" x-show="isProductBeingAdded">
+          <?= __('Adding...') ?>
+        </span>
+      </button>
+
+      <!-- TODO: refactor to eliminate duplicates -->
+      <!-- Select another option, for configurable when variant is in cart -->
+      <button
+        <?php if (!$isProductInCart || $isPopup || !$hasVariants): ?>
+          style="display: none"
+        <?php endif; ?>
+        x-show="<?= (int) $hasVariants ?> && isVariantInCart && !<?= (int) $isPopup ?>"
         class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
         @click.prevent="showProductActions()"
         type="button"
       >
-      <span
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
-        class="inline-flex items-center"
-      >
-        <?= __('Show links') ?>
         <span
-          class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+          x-show="!isProductBeingAdded && !isProductBeingRemoved"
+          class="inline-flex items-center"
         >
-          <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+          <?= __('Select another option') ?>
+          <span
+            class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+          >
+            <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+          </span>
         </span>
-      </span>
 
         <span style="display: none" x-show="isProductBeingRemoved">
           <?= __('Removing from cart...') ?>
-      </span>
+        </span>
 
         <span style="display: none" x-show="isProductBeingAdded">
           <?= __('Adding...') ?>
-      </span>
+        </span>
       </button>
-    <?php endif; ?>
 
-    <!-- Customize bundle, for bundle products -->
-    <?php if ($productType === 'bundle'): ?>
+      <!-- Show links, for downloadable products -->
+      <?php if ($productType === 'downloadable'): ?>
+        <button
+          <?php if ($isPopup): ?>
+            style="display: none"
+          <?php endif; ?>
+          x-show="<?= (int) !$isPopup ?>"
+          class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
+          @click.prevent="showProductActions()"
+          type="button"
+        >
+          <span
+            x-show="!isProductBeingAdded && !isProductBeingRemoved"
+            class="inline-flex items-center"
+          >
+            <?= __('Show links') ?>
+            <span
+              class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+            >
+              <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+            </span>
+          </span>
+
+          <span style="display: none" x-show="isProductBeingRemoved">
+            <?= __('Removing from cart...') ?>
+          </span>
+
+          <span style="display: none" x-show="isProductBeingAdded">
+            <?= __('Adding...') ?>
+          </span>
+        </button>
+      <?php endif; ?>
+
+      <!-- Customize bundle, for bundle products -->
+      <?php if ($productType === 'bundle'): ?>
+        <button
+          <?php if ($isPopup): ?>
+            style="display: none"
+          <?php endif; ?>
+          x-show="<?= (int) !$isPopup ?>"
+          class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
+          @click.prevent="showProductActions()"
+          type="button"
+        >
+          <span
+            x-show="!isProductBeingAdded && !isProductBeingRemoved"
+            class="inline-flex items-center"
+          >
+            <?= __('Customize bundle') ?>
+            <span
+              class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+            >
+              <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+            </span>
+          </span>
+
+          <span style="display: none" x-show="isProductBeingRemoved">
+            <?= __('Removing from cart...') ?>
+          </span>
+
+          <span style="display: none" x-show="isProductBeingAdded">
+            <?= __('Adding...') ?>
+          </span>
+        </button>
+      <?php endif; ?>
+
+      <!-- Already in cart -->
       <button
-        <?php if (!$inStock | $isPopup): ?>
+        <?php if (!$isProductInCart): ?>
           style="display: none"
         <?php endif; ?>
-        x-show="<?= (int) !$isPopup ?>"
-        class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
-        @click.prevent="showProductActions()"
+        x-show="isVariantInCart"
+        class="
+          animate-on-transition button button--disabled button--outline-secondary flex-grow
+          <?= $isSmall ? 'button--size-sm' : '' ?>
+          <?= $hasVariants ? 'max-md:hidden' : '' ?>
+          <?= $isPopup ? 'max-sm:px-3' : '' ?>
+        "
+        @click.prevent="$store.cart.showCart()"
+        x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
         type="button"
       >
-      <span
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
-        class="inline-flex items-center"
-      >
-        <?= __('Customize bundle') ?>
-        <span
-          class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
-        >
-          <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+        <span>
+          <?= __('Already in cart') ?>
         </span>
-      </span>
+      </button>
 
-        <span style="display: none" x-show="isProductBeingRemoved">
-          <?= __('Removing from cart...') ?>
-      </span>
-
-        <span style="display: none" x-show="isProductBeingAdded">
-          <?= __('Adding...') ?>
-      </span>
+      <!-- Show product button -->
+      <a
+        <?php if (!$isPopup || !$isProductInCart || $productType === 'downloadable'): ?>
+          style="display: none"
+        <?php endif; ?>
+        x-show="<?= (int) ($productType !== 'downloadable') ?> && (!isVariantInCart || <?= (int) $isPopup ?>)"
+        class="animate-on-transition button button--outline-primary flex-grow md:hidden <?= $isPopup ? 'max-sm:px-3' : '' ?>"
+        :class="
+          {
+            'max-md:hidden': !isVariantInCart || !<?= (int) $isPopup ?>
+          }
+        "
+        href="#"
+        @click.prevent="hideProductActions()"
+      >
+        <?= __('Show product') ?>
+      </a>
+    <?php else: ?>
+      <!-- Out of stock button -->
+      <button
+        class="animate-on-transition button button--disabled button--outline-secondary flex-grow <?= $isSmall ? 'button--size-sm' : '' ?>"
+        disabled
+        type="button"
+      >
+        <?= __('Out of stock') ?>
       </button>
     <?php endif; ?>
-
-    <!-- Already in cart -->
-    <button
-      <?php if (!$isProductInCart): ?>
-        style="display: none"
-      <?php endif; ?>
-      x-show="isVariantInCart"
-      class="
-        animate-on-transition button button--disabled button--outline-secondary flex-grow
-        <?= $isSmall ? 'button--size-sm' : '' ?>
-        <?= $hasVariants ? 'max-md:hidden' : '' ?>
-        <?= $isPopup ? 'max-sm:px-3' : '' ?>
-      "
-      @click.prevent="$store.cart.showCart()"
-      x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
-      type="button"
-    >
-      <span>
-        <?= __('Already in cart') ?>
-      </span>
-    </button>
-
-    <!-- Out of stock button -->
-    <button
-      <?php if ($isProductInCart || !$inStock): ?>
-        style="display: none"
-      <?php endif; ?>
-      x-show="!isVariantInCart || <?= (int) $isPopup ?>"
-      class="
-        animate-on-transition button button--disabled button--outline-secondary flex-grow
-        <?= $isSmall ? 'button--size-sm' : '' ?>
-        <?= ($inStock || (!$isPopup && $hasVariants)) ? 'max-md:hidden' : '' ?>
-        <?= $inStock ? 'md:hidden' : '' ?>
-        <?= $isPopup ? 'max-sm:px-3' : '' ?>
-      "
-      disabled
-      type="button"
-    >
-      <?= __('Out of stock') ?>
-    </button>
-
-    <!-- Show product button -->
-    <a
-      <?php if (!$isPopup || !$isProductInCart || $productType === 'downloadable'): ?>
-        style="display: none"
-      <?php endif; ?>
-      x-show="<?= (int) ($productType !== 'downloadable') ?> && (!isVariantInCart || <?= (int) $isPopup ?>)"
-      class="animate-on-transition button button--outline-primary flex-grow md:hidden <?= $isPopup ? 'max-sm:px-3' : '' ?>"
-      :class="
-      {
-        'max-md:hidden': !isVariantInCart || !<?= (int) $isPopup ?>
-      }
-    "
-      href="#"
-      @click.prevent="hideProductActions()"
-    >
-      <?= __('Show product') ?>
-    </a>
   </div>
 </div>
 
