INTERNAL-349; added hover:underline class to product links, removed title attr to match side menu links, and added x-element-transition-trigger attr

--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/reorder/sidebar.phtml
@@ -60,9 +60,9 @@ if (! $customer->customerLoggedIn()) {
                                                 <?= $hyvaicons->renderHtml('checkmark') ?>
                                             </span>
                                             <a
-                                                class="checkbox__label ml-0"
+                                                x-element-transition-trigger
+                                                class="checkbox__label ml-0 hover:underline"
                                                 :href="product.url"
-                                                :title="product.name"
                                                 :aria-describedby="!product.is_saleable || checkboxId + product.id"
                                                 x-text="product.name"
                                             ></a>
@@ -94,7 +94,9 @@ if (! $customer->customerLoggedIn()) {
                 '<?= $escaper->escapeHtml(__('Add to Cart')) ?>'"><?= $escaper->escapeHtml(__('Add to Cart')) ?></span>
             </button>
         </template>
-        <a href="<?= $escaper->escapeUrl($block->getUrl('customer/account')) ?>#recentOrders"
+        <a
+            x-element-transition-trigger
+            href="<?= $escaper->escapeUrl($block->getUrl('customer/account')) ?>#recentOrders"
             class="button button--ghost-primary max-md:w-full max-md:mt-4"
             aria-label="<?= $escaper->escapeHtmlAttr(__('View all recent orders')) ?>"
         >
