--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -348,3 +348,13 @@ $cartMessage = $block->getCartMessage();
     <?= $cartMessage['message'] ?>
   </span>
 <?php endif; ?>
+
+<?php
+// TODO: Implement add to wishtlist / add to compare
+// echo $block->getChildHtml('product.info.addtowishlist');
+// echo $block->getChildHtml('product.info.addtocompare');
+?>
+<?php
+// TODO: Implement email to a friend
+// $block->getChildHtml('product.info.emailtofriend')
+?>
