--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/layout/catalog_product_view_type_bundle.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/layout/catalog_product_view_type_bundle.xml
@@ -4,7 +4,10 @@
     <body>
         <move element="product.info.quantity" destination="product.actions"/>
         <move element="product.info.addtocart" destination="product.actions"/>
-        <move element="addtocart.shortcut.buttons" destination="product.actions"/>
+        <move element="addtocart.shortcut.buttons" destination="product.info"/>
         <move element="product.info.form" destination="product.info"/>
+
+        <move element="product.info.bundle.options" destination="product.info.form"/>
+        <move element="bundle.summary" destination="product.info.form"/>
     </body>
 </page>
