--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
@@ -25,12 +25,10 @@ $isPopup = $block->getData('is_popup') ?? false;
     <form method="post"
           action="<?= $escaper->escapeUrl($productInfoBlock->getSubmitUrl($product)) ?>"
           id="product_addtocart_form"
-        <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
+          class="animate-on-transition"
           @submit.prevent="addToCart($event)"
-        <?php if (!$isPopup): ?>
-            class="animate-on-transition max-md:hidden"
-        <?php else: ?>
-            class="max-md:mx-2"
+        <?php if ($product->getOptions()): ?>
+            enctype="multipart/form-data"
         <?php endif; ?>
     >
         <input type="hidden" name="product" value="<?= (int)$product->getId() ?>"/>
@@ -38,8 +36,8 @@ $isPopup = $block->getData('is_popup') ?? false;
         <input type="hidden" name="related_product" id="related-products-field" value=""/>
         <input type="hidden" name="item" value="<?= (int)$block->getRequest()->getParam('id') ?>">
         <?= $block->getBlockHtml('formkey') ?>
-
         <?= $block->getChildHtml() ?>
-
+        <?= $block->getChildHtml('product.info.bundle.options') ?>
+        <?= $block->getChildHtml('bundle.summary') ?>
     </form>
 <?php endif; ?>
