--- a/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/view/renderer.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/view/renderer.phtml
@@ -1,5 +1,9 @@
 <?php
 
+/**
+ * Configurable product variant selector in PDP.
+ */
+
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
@@ -33,11 +37,10 @@ $swatchItemBlock->setData('product_id', $productId);
 
 $tooltipBlockHtml = $block->getBlockHtml('product.swatch.tooltip');
 
-
 $index = 0;
 ?>
 <?php if ($product->isSaleable() && count($attributes)): ?>
-    <div class="md:mb-7"
+    <div class="md:mb-7 min-h-[152px]"
          x-init="initAttributes(<?= $escaper->escapeHtmlAttr($block->getJsonSwatchConfig()) ?>, <?= $escaper->escapeHtmlAttr($block->getJsonConfig()) ?>)">
         <div class="flex flex-col gap-5">
             <?php foreach ($attributes as $i => $attribute): ?>
