INTERNAL-390; fix heading style

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/title.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/title.phtml
@@ -7,10 +7,12 @@ use Magento\Theme\Block\Html\Title;
 
 /** @var Escaper $escaper */
 /** @var Title $block */
+
+$cssClass = $block->getCssClass() ?: 'content-wrapper mx-auto';
 ?>
 
 <?php if (trim((string)$block->getPageHeading())): ?>
-    <div class="<?= $block->getCssClass() ?>">
+    <div class="<?= $cssClass ?>">
         <h1 class="text-text-500 text-xxl mb-5" <?= $block->getAddBaseAttribute() ?>>
             <?= $escaper->escapeHtml($block->getPageHeading()) ?>
         </h1>
