--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/item/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/item/list.phtml
@@ -10,7 +10,7 @@ $columns = $block->getColumns();
 
 <div>
     <?php if (count($block->getItems())): ?>
-    <ol class="grid gap-5 grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3" data-content-wrapper>
+    <ol class="grid gap-5 grid-cols-1 sm:grid-cols-2 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4" data-content-wrapper>
         <!-- pagination-content -->
         <?php foreach ($block->getItems() as $item): ?>
             <li
